--- a/waybar/style.css
+++ b/waybar/style.css
@@ -135,3 +135,15 @@ tooltip label {
 #language {
     min-width: 16px;
 }
+
+#custom-cpu_temp {
+border: 2px solid #cba6f7;
+padding: 3px 8px;
+min-width: 50px;
+border-radius: 8px;
+background-color: rgba(6, 6, 6, 0.6);
+font-size: 12px;
+color: #cba6f7;
+margin: 4px 4px 4px 0px;
+}
+
